<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:layout_gravity="center"
            android:height="40sp"
            android:gravity="center"
            android:text="@string/setting_ua"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/count_questions_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Кількіть питань  : 5"
            android:textSize="20dp"
            android:layout_marginTop="15dp"/>

        <SeekBar
            android:id="@+id/count_questions_seekbar"
            style="@android:style/Widget.Material.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:min="5"
            android:progress="5"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language_ua"
            android:textSize="20dp"
            android:layout_marginTop="15dp"/>

        <RadioGroup
            android:id="@+id/language_group"
            android:layout_width="match_parent"
            android:layout_height="121dp">

            <RadioButton
                android:id="@+id/english_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:textSize="20sp"
                android:layout_marginTop="5dp"/>

            <RadioButton
                android:id="@+id/german_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/german"
                android:textSize="20sp"
                android:layout_marginTop="5dp"/>

        </RadioGroup>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_of_timer_ua"
            android:textSize="20sp"
            android:layout_marginTop="15dp"/>

        <RadioGroup
            android:id="@+id/timer_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <RadioButton
                android:id="@+id/time20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twenty_secont_ua"
                android:textSize="16sp"
                android:layout_marginRight="10sp"
                />

            <RadioButton
                android:id="@+id/time30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thirty_second_ua"
                android:textSize="16sp"
                android:layout_marginRight="10sp"/>

            <RadioButton
                android:id="@+id/time60"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sixty_second_ua"
                android:textSize="16sp"
                android:layout_marginRight="10sp"/>

        </RadioGroup>

        <Button
            android:id="@+id/test_with_variants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_with_variants_ua"
            android:layout_marginTop="50dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:height="50dp"/>

        <Button
            android:id="@+id/test_with_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/test_with_input_ua"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:height="50dp"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>