<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TestWithInputActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical|center_horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/time_display_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingTop="8dp"
            android:layout_marginBottom="30dp"
            android:paddingEnd="16dp" />

        <TextView
            android:id="@+id/test_word_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="16dp"
            android:text="@string/word"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_variant_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/input_translate"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="18sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/check_word_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_ua"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/go_to_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_ua"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:visibility="invisible"
            android:textColor="#FFFFFF" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>